ticketing.web/deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ticketingweb
  namespace: default
  labels:
    app: ticketingweb
spec:
  replicas: 1
  selector:
    matchLabels:
        app: ticketingweb
  template:
    metadata:
      name: ticketingweb
      labels:
        app: ticketingweb
    spec:
      containers:
      - name: ticketingweb
        image: denhamparry/ticketing.web
        resources: {}
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: Always
        securityContext:
          privileged: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
