ticketing.web/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ticketingweb
  labels:
    app: ticketingweb
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: ticketingweb
---
