ticketing.web/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ticketing-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - www.developmentsquad.com
    secretName: tls-secret-prod
  rules:
  - host: www.developmentsquad.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ticketingweb
          servicePort: 80
      - path: /api
        backend:
          serviceName: ticketingapi
          servicePort: 80
---
